projects/compiler/test/typechecker/funcdecl/error_macro_invalid_param_type.out
Error at %FILE_NAME%:4:11
Invalid parameter type for @macro function
  |  func uhOh(val1: Int[]): InjectedCode = todo()
               ^
Macro parameters must be of type 'meta.Expr'
