projects/compiler/test/typechecker/funcdecl/error_macro_invalid_param_type.abra
import macro, InjectedCode from "meta"

@macro
func uhOh(val1: Int[]): InjectedCode = todo()
